--- a/javaee7-spring-mvc/src/main/resources/messages.properties
+++ b/javaee7-spring-mvc/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 required.book.id =Book id is required
 
 #message for testing thmyeleaf view
-home.welcome = This is message from message.properties
+home.welcome = Welcome to our <b>fantastic</b> grocery store!
