--- a/javaee7-spring-mvc/src/main/resources/messages.properties
+++ b/javaee7-spring-mvc/src/main/resources/messages.properties
@@ -1,4 +1,12 @@
 required.book.id =Book id is required
+required.book.title=Book title is required
+size.book.title = Title length should be 3 to 10
+uppercase.book.title = Title must start with uppercase letter
 
+required.book.author = Author must not be empty
+required.book.description = Description cannot be empty
+
+required.book.price= Price cannot be empty
+length.book.price = Price must start from 1 
 #message for testing thmyeleaf view
 home.welcome = Welcome to our <b>fantastic</b> grocery store!
