--- a/javaee7-jpa-mvc/src/main/resources/messages.properties
+++ b/javaee7-jpa-mvc/src/main/resources/messages.properties
@@ -11,5 +11,6 @@ required.human.lastName = Lastname required
 size.human.lastName =Last name should be with 3 to 100 characters
 
 required.human.gender = Gender required
+required.human.birthday = Birthday required
 #message for testing thmyeleaf view
 view.greeting = Hello World from message.properties
