add spring security

--- a/javaee7-jpa-mvc/src/main/resources/messages.properties
+++ b/javaee7-jpa-mvc/src/main/resources/messages.properties
@@ -14,3 +14,6 @@ required.human.gender = Gender required
 required.human.birthday = Birthday required
 #message for testing thmyeleaf view
 view.greeting = Hello World from message.properties
+
+required.user.username = Username required
+required.user.password = Password required
